[metadata]
name = spotify-banner
version = 1.0.3
description = Django reusable app for spotify banner
long_description = file:README.rst
url = https://github.com/k4anubhav/spotify-banner
license = MIT

[options]
include_package_data = true
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    django>=4.0
    djangorestframework~=3.14.0
    spotipy~=2.20.0
    python-dotenv~=0.21.0
    Pillow~=9.2.0
    requests~=2.28.1